# sclog_lite

./: .readthedocs.yaml  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
docs/: requirements.txt
docs/source/: conf.py  index.rst  modules.rst  sclog_lite.rst
src/sclog_lite/: __init__.py  logger.py  mysql_sink.py  pgsql_sink.py
tests/: test_sclog.py
